--- a/popup.html
+++ b/popup.html
@@ -51,41 +51,7 @@ img {
     background: #E0E5EE;
 }
 </style>
-
-<script>
-var openTabs = chrome.extension.getBackgroundPage().openTabs;
-var closedTab = chrome.extension.getBackgroundPage().closedTab;
-
-window.onload = function() {
-    var list = document.createElement("ul");
-    var listelem = document.createElement("li");
-    if (closedTab !== null) {
-        var img = document.createElement("img");
-        img.src = closedTab.favIconUrl;
-        var url = document.createElement("a");
-        url.href = "#";
-        (function() {
-            var tab = closedTab;
-            url.addEventListener('click', function() {
-                chrome.tabs.create({"url": tab.url}, function(t) {
-                    openTabs[t.id] = t;
-                });
-            window.close();
-            });
-        })();
-        url.title = closedTab.title + " - " + closedTab.url;
-        url.appendChild(img);
-        url.appendChild(document.createTextNode(closedTab.title));
-        listelem.appendChild(url);
-    }
-    else {
-        listitem.style.fontStyle = "italic";
-        listitem.appendChild(document.createTextNode("No closed tab yet."));
-    }
-    list.appendChild(listelem);
-    document.body.appendChild(list);
-}
-</script>
+<script src="popup.js"></script>
 </head>
 <body>
 </body>
